force-app/main/default/objects/Company__c/fields/Number_of_Department__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Department__c</fullName>
    <label>Number of Department</label>
    <summaryForeignKey>Department__c.Company__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>