force-app/main/default/objects/Company__c/fields/Number_of_Employee__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employee__c</fullName>
    <label>Number of Employee</label>
    <summaryForeignKey>Employee__c.Company__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>