force-app/main/default/objects/Company__c/fields/Total_Salary_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Salary_Amount__c</fullName>
    <label>Total Salary Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>